--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   "dependencies": {
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
-    "next": "^15.3.6",
+    "chart.js": "^4.5.1",
+    "next": "15.3.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "recharts": "^2.13.3"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^8",
-    "eslint-config-next": "^15.3.6"
+    "eslint-config-next": "15.3.6"
   }
 }
