fix: Next.js 15.3.6 patch CVE

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
     "chart.js": "^4.5.1",
-    "next": "15.3.6",
+    "next": "^15.3.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -22,6 +22,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^8",
-    "eslint-config-next": "15.3.6"
+    "eslint-config-next": "^15.3.6"
   }
 }
